--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <h1>Proves Git</h1>
 <ul>
-    <li>Pas 1: Inicialitzar el repositori: git init
+    <li>Pas 1: Inicialitzar el repositori: git in</li>
+    <li>Pas 2: Ni idea</li>
+    <li>Pas 3: Menos aun</li>
 </ul>
