Añadidas lineas a index

--- a/index.html
+++ b/index.html
@@ -3,4 +3,8 @@
     <li>Pas 1: Inicialitzar el repositori: git in</li>
     <li>Pas 2: Ni idea</li>
     <li>Pas 3: Menos aun</li>
+    <li>Pas 3: Menos aun</li>
+    <li>Pas 3: Menos aun</li>
+    <li>Pas 3: Menos aun</li>
+    <li>Pas 3: Menos aun</li>
 </ul>
